finally have searched gis arriving in my console

--- a/index.html
+++ b/index.html
@@ -40,26 +40,6 @@
 
   <!-- SECTION -->
   <main>
-    <section>
-      <div class="offcanvas offcanvas-end show" tabindex="-1" id="offcanvas" aria-labelledby="offcanvasLabel">
-        <div class="offcanvas-header">
-          <h5 class="offcanvas-title fs-1" id="offcanvasLabel">Giphs From Giphy</h5>
-          <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-        </div>
-        <div class="offcanvas-body">
-          <label for="search" class="form-label fs-3">Search for a Giph</label>
-          <input class="form-control border border-dark" name="search" id="search-input" type="text"
-            placeholder="Type to search for Giph..." required maxlength="150">
-          <button onclick="app.giphysController.search('query')" type="submit"
-            class="btn btn-primary mt-2">Search</button>
-          <div id="gifs" class="row">
-
-          </div>
-        </div>
-
-      </div>
-    </section>
-
     <div class="container-fluid">
       <div class="row">
         <div class="col-md-3 bg-success">
@@ -72,6 +52,28 @@
             <button class="btn btn-danger btn-outline-dark text-light fw-bold mb-2 fs-3" type="reset">Reset</button>
             <button class="btn btn-warning btn-outline-dark text-light fw-bold mb-2 fs-3" type="submit">Submit</button>
           </form>
+
+          <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight"
+            aria-controls="offcanvasRight">Toggle right offcanvas</button>
+          <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel">
+            <div class="offcanvas-header">
+              <h5 class="offcanvas-title fs-1" id="offcanvasLabel">Giphs From Giphy</h5> <button type="button"
+                class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+            </div>
+
+            <form onsubmit="app.giphysController.search()">
+              <div class="offcanvas-body">
+                <label for="search" class="form-label fs-3">Search for a Giph</label>
+                <input class="form-control border border-dark" name="search" id="search-input" type="text"
+                  placeholder="Type to search for Giph..." required maxlength="150">
+                <button type="submit" class="btn btn-primary mt-2">Search</button>
+                <div id="gifs" class="row">
+
+                </div>
+              </div>
+            </form>
+          </div>
+
 
         </div>
         <div class="col-md-9">
